--- a/CSS/color.css
+++ b/CSS/color.css
@@ -17,7 +17,7 @@ background-color:#808080;
 color:#ff9528;
 }
 .tim:hover{
-background-color:#b462ff;
+background-color:#ff9528;
 color:black;
 }
 .cmt{
