--- a/CSS/design.css
+++ b/CSS/design.css
@@ -1,7 +1,11 @@
 *{
     margin:0;
 }
-
+.box-scroll{
+    width: 200px;
+    height: 100px;
+    overflow-y: scroll;
+}
 html {
     height: 100%;
 }
